post overflow fixed & regex checking break issue fixed too

--- a/src/styles/components/user/tabs.scss
+++ b/src/styles/components/user/tabs.scss
@@ -98,7 +98,7 @@
   }
 
   .post-content {
-    white-space: pre;
+    white-space: pre-wrap;
     line-height: 2.1;
     font-size: $font-size-post-content;
     padding: 10px 0;
